Fixes two canvas now visible, fixes nav absolute, all elements placed and visible, Stable Version

--- a/cubes.css
+++ b/cubes.css
@@ -1,18 +1,29 @@
 /* Cubes */
-body {
+/* body {
     margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
+} */
+body {
+    margin: 0;
+    padding: 0;
 }
-.webgl-Cubes {
+
+/* .webgl-Cubes {
     
     height: 100%;
     width: 100%;
     position: absolute;
-    z-index: 2;
+    z-index: 12;
+} */
+.scene {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
 }
 
 #canvas-cube {
@@ -43,14 +54,13 @@ body {
 
 #cube-section {
     position: relative;
-    height: 1000px;  
+    height: 100vh;  
     width: 100%;
     overflow: hidden;
     z-index:10;
 }
 
-.webgl,
-.webgl-Cubes {
+.webgl, .webgl-Cubes {
     position: absolute;
     top: 0;
     left: 0;
